Fix image card alignment and page padding

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header {
     flex: auto;
     justify-content: space-between;
     align-items: center;
-    padding: 0 80px;
+    padding: 16px 100px;
 }
 
 .content-1{
@@ -27,7 +27,7 @@ header {
     justify-content: space-between;
     align-items: center;
     flex: auto;
-    padding: 16px 80px;
+    padding: 32px 100px;
     gap: 16px;
 }
 
@@ -43,7 +43,7 @@ header {
     justify-content: space-between;
     align-items: center;
     flex: auto;
-    padding: 16px 80px;
+    padding: 32px 100px;
 }
 
 .cards{
@@ -56,7 +56,9 @@ header {
 
 .subtext {
     color: #1f2937;
+    text-align: center;
     padding: 16px;
+    width: 175px;
 }
 
 .content-3{
@@ -66,7 +68,7 @@ header {
     justify-content: space-between;
     align-items: center;
     flex: auto;
-    padding: 16px 80px;
+    padding: 32px 100px;
     
 }
 
@@ -90,7 +92,7 @@ h4 {
     justify-content: center;
     align-items: center;
     flex: auto;
-    padding: 16px 80px;
+    padding: 32px 100px;
 }
 
 .blue-box {
@@ -110,7 +112,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 80px;
+    padding: 16px 100px;
 }
 
 button {
@@ -164,7 +166,6 @@ a {
 
 img {
     width: 120px;
-    background-color: orange;
     border-color: #3882f6;
     border-width: 2px;
     border-style: solid;
